...
        singleLine = true)
    ExposedDropdownMenu(
        expanded = isExpanded,
        onDismissRequest = { isExpanded = false },
        modifier =
            Modifier.exposedDropdownSize(true)
                .testTag("exposedDropDownMenu")
                .requiredSizeIn(maxHeight = 150.dp)) {
          options.forEach { option ->
            DropdownMenuItem(
                text = { Text(text = option, fontSize = 16.sp) },
                onClick = {
                  selectedOption = option
...
        shape = RoundedCornerShape(12.dp),
        modifier = modifier.menuAnchor(MenuAnchorType.PrimaryEditable))
    ExposedDropdownMenu(
        modifier =
            Modifier.exposedDropdownSize(true)
                .requiredSizeIn(maxHeight = 150.dp)
                .testTag("locationExposedDropDownMenu"),
        expanded = expanded,
        onDismissRequest = { setExpanded(false) },
    ) {
      locationList.forEach { location ->
        DropdownMenuItem(
            text = { Text(location.address, style = MaterialTheme.typography.bodyLarge) },
...
